# task-choice-stopping

./: LICENSE  README.md  pyproject.toml  test.csv
archive/: task_retune_B03.py  test.py  test_keyboard.py
data/sourcedata/: participants.csv  sub-pilot01_ses-MedOff01_task-ChoiceStoppingR_acq-StimOff_run-1_beh-20241204T145733.csv
data/sourcedata/sub-pilot02_ses-MedOn01_task-ChoiceStoppingR_acq-StimOff_run-1_beh-20241210T165358/: data.csv  targets.npy
src/choice_stopping/: task.py  task2.py
