[project]
name = "choice-stopping"
version = "0.1.0"
description = "Task for WP2 of ReTune B03 2nd funding period."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24.4"]

[dependency-groups]
dev = ["psychopy"]

[tool.uv.sources]
psychopy = { git = "https://github.com/richardkoehler/psychopy", branch = "task-choice-stopping" }

[tool.ruff]
target-version = "py39"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["numpy", "psychopy.*"]
